Added layou with Collapsing toolbar, and Navigation Drawer. Implemented SharedPrefermeces and EditMode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="VK_profile">Профиль в VK</string>
     <string name="repository">Репозиторий</string>
     <string name="about_myself">О себе</string>
+    <string name="my_profile">Мой профиль</string>
+    <string name="team">Команда</string>
 </resources>
