--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,13 @@
     <string name="user_profile_dialog.cancel">Отменить</string>
     <string name="user_profile_dialog.title">Изменить фотографию профиля</string>
     <string name="user_profile.choose.message">выберите фото</string>
+    <string name="chooser_title_dial">Выберите программу дозвона:</string>
+    <string name="chooser_title_sendEmail">Выберите почтовый клиент:</string>
+    <string name="chooser_title_openBrowser">Выберите браузер:</string>
+    <string name="snackbar_give_permissions">Необходимо дать разрешения</string>
+    <string name="snackbar_give_permissions_button">Разрешить</string>
+    <string name="password">Пароль</string>
+    <string name="login_card_title">ВОЙТИ</string>
+    <string name="login_button">ВОЙТИ</string>
+    <string name="login_forgot_password">Забыли пароль?</string>
 </resources>
