Implemented drawer menus and Navigating through the MENU. Added showProgress. Implemented resizing of profile pictures via Picasso

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="repository">Репозиторий</string>
     <string name="about_myself">О себе</string>
     <string name="my_profile">Профиль</string>
-    <string name="contacts">Контакты</string>
+    <string name="contacts">Команды</string>
     <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
     <string name="user_profile_dialog.gallery">Загрузить из галереи</string>
     <string name="user_profile_dialog.camera">Сделать снимок</string>
@@ -44,5 +44,6 @@
     <!--Fonts-->
     <string name="ff_medium">sans-serif-medium</string>
     <string name="more_info_btn">Просмотр</string>
+    <string name="logout">Выход</string>
 
 </resources>
