--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,6 @@
     <string name="ff_medium">sans-serif-medium</string>
     <string name="more_info_btn">Просмотр</string>
     <string name="logout">Выход</string>
+    <string name="query_hint">Введите Имя пользователя</string>
 
 </resources>
